Bug 330296 - c++ import parse error on hex values
Summary: c++ import parse error on hex values
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-22 18:06 UTC by Ralf Habacker
Modified: 2014-01-29 06:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-01-22 18:06:00 UTC
Importing the following code fails to add the enum values. 

class Corner
{
public:
    enum Enum {
        TopLeft     = 0x1,
        TopRight    = 0x2,
        BottomRight = 0x4,
        BottomLeft  = 0x8
    };
};


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. umbrello file with the mentioned c++ code
Actual Results:  
The enum do not have any values.

Expected Results:  
The enum values should be added
Comment 1 Ralf Habacker 2014-01-22 18:10:55 UTC
Git commit a10b8924ae6935df7b6c8dc5907ff3a6a45bef7e by Ralf Habacker.
Committed on 21/01/2014 at 21:42.
Pushed by habacker into branch 'master'.

Support hex digits in numeric literals.

M  +2    -1    umbrello/codeimport/kdevcppparser/lexer.cpp
M  +1    -1    umbrello/codeimport/kdevcppparser/preprocesslexer.cpp
M  +1    -0    umbrello/codeimport/kdevcppparser/preprocesslexer.h

http://commits.kde.org/umbrello/a10b8924ae6935df7b6c8dc5907ff3a6a45bef7e
Comment 2 Ralf Habacker 2014-01-22 19:57:57 UTC
Git commit a55f9fefce1d91d46c3071af32072b5552b651d9 by Ralf Habacker.
Committed on 21/01/2014 at 21:42.
Pushed by habacker into branch 'KDE/4.11'.

Support hex digits in numeric literals.
FIXED-IN:4.11.6
(cherry picked from commit a10b8924ae6935df7b6c8dc5907ff3a6a45bef7e)

Conflicts:
	umbrello/codeimport/kdevcppparser/lexer.cpp
	umbrello/codeimport/kdevcppparser/preprocesslexer.cpp
	umbrello/codeimport/kdevcppparser/preprocesslexer.h

M  +2    -1    umbrello/codeimport/kdevcppparser/lexer.cpp
M  +1    -1    umbrello/codeimport/kdevcppparser/preprocesslexer.cpp
M  +5    -4    umbrello/codeimport/kdevcppparser/preprocesslexer.h

http://commits.kde.org/umbrello/a55f9fefce1d91d46c3071af32072b5552b651d9
Comment 3 Ralf Habacker 2014-01-22 19:57:59 UTC
Git commit 4a494479163a47aec3be067b3cce71e3fc3f5f2c by Ralf Habacker.
Committed on 21/01/2014 at 21:42.
Pushed by habacker into branch 'KDE/4.12'.

Support hex digits in numeric literals.
FIXED-IN:2.12.2
(cherry picked from commit a10b8924ae6935df7b6c8dc5907ff3a6a45bef7e)

M  +2    -1    umbrello/codeimport/kdevcppparser/lexer.cpp
M  +1    -1    umbrello/codeimport/kdevcppparser/preprocesslexer.cpp
M  +1    -0    umbrello/codeimport/kdevcppparser/preprocesslexer.h

http://commits.kde.org/umbrello/4a494479163a47aec3be067b3cce71e3fc3f5f2c