Support hex digits in numeric literals.

BUG:330296
FIXED-IN:4.11.6
(cherry picked from commit a10b8924ae6935df7b6c8dc5907ff3a6a45bef7e)

Conflicts:
	umbrello/codeimport/kdevcppparser/lexer.cpp
	umbrello/codeimport/kdevcppparser/preprocesslexer.cpp
	umbrello/codeimport/kdevcppparser/preprocesslexer.h